--- a/assignment2/assignment.ipynb
+++ b/assignment2/assignment.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
        "4    166    346       1  886397596"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -500,7 +500,7 @@
        "[1682 rows x 20 columns]"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1266,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1508,7 +1508,13 @@
       "24등 영화 제목 : Return of the Jedi (1983)\n",
       "25등 영화 제목 : Three Colors: Blue (1993)\n",
       "26등 영화 제목 : GoodFellas (1990)\n",
-      "27등 영화 제목 : It's a Wonderful Life (1946)\n",
+      "27등 영화 제목 : It's a Wonderful Life (1946)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "28등 영화 제목 : My Best Friend's Wedding (1997)\n",
       "29등 영화 제목 : Star Wars (1977)\n",
       "30등 영화 제목 : Birdcage, The (1996)\n",
@@ -1699,13 +1705,7 @@
       "9등 영화 제목 : Rock, The (1996)\n",
       "10등 영화 제목 : Pulp Fiction (1994)\n",
       "11등 영화 제목 : Mission: Impossible (1996)\n",
-      "12등 영화 제목 : Empire Strikes Back, The (1980)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "12등 영화 제목 : Empire Strikes Back, The (1980)\n",
       "13등 영화 제목 : Aliens (1986)\n",
       "14등 영화 제목 : Back to the Future (1985)\n",
       "15등 영화 제목 : Contact (1997)\n",
@@ -1795,7 +1795,13 @@
       "99등 영화 제목 : Ransom (1996)\n",
       "100등 영화 제목 : Gandhi (1982)\n",
       "\n",
-      "6. entertainment에게 가장 시청률이 높은 영화 TOP 100\n",
+      "6. entertainment에게 가장 시청률이 높은 영화 TOP 100\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "1등 영화 제목 : Contact (1997)\n",
       "2등 영화 제목 : Scream (1996)\n",
@@ -2083,13 +2089,7 @@
       "78등 영화 제목 : Wizard of Oz, The (1939)\n",
       "79등 영화 제목 : Four Weddings and a Funeral (1994)\n",
       "80등 영화 제목 : Mighty Aphrodite (1995)\n",
-      "81등 영화 제목 : Clear and Present Danger (1994)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "81등 영화 제목 : Clear and Present Danger (1994)\n",
       "82등 영화 제목 : Eraser (1996)\n",
       "83등 영화 제목 : Rear Window (1954)\n",
       "84등 영화 제목 : It Happened One Night (1934)\n",
@@ -2108,7 +2108,13 @@
       "97등 영화 제목 : Graduate, The (1967)\n",
       "98등 영화 제목 : Heat (1995)\n",
       "99등 영화 제목 : Apollo 13 (1995)\n",
-      "100등 영화 제목 : That Thing You Do! (1996)\n",
+      "100등 영화 제목 : That Thing You Do! (1996)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "9. homemaker에게 가장 시청률이 높은 영화 TOP 100\n",
       "\n",
@@ -2362,7 +2368,13 @@
       "42등 영화 제목 : Postino, Il (1994)\n",
       "43등 영화 제목 : Forrest Gump (1994)\n",
       "44등 영화 제목 : 2001: A Space Odyssey (1968)\n",
-      "45등 영화 제목 : Rock, The (1996)\n",
+      "45등 영화 제목 : Rock, The (1996)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "46등 영화 제목 : Back to the Future (1985)\n",
       "47등 영화 제목 : Liar Liar (1997)\n",
       "48등 영화 제목 : Raising Arizona (1987)\n",
@@ -2435,13 +2447,7 @@
       "12등 영화 제목 : Return of the Jedi (1983)\n",
       "13등 영화 제목 : L.A. Confidential (1997)\n",
       "14등 영화 제목 : Scream (1996)\n",
-      "15등 영화 제목 : Toy Story (1995)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "15등 영화 제목 : Toy Story (1995)\n",
       "16등 영화 제목 : Evita (1996)\n",
       "17등 영화 제목 : Game, The (1997)\n",
       "18등 영화 제목 : Seven Years in Tibet (1997)\n",
@@ -2610,7 +2616,13 @@
       "78등 영화 제목 : Waterworld (1995)\n",
       "79등 영화 제목 : First Kid (1996)\n",
       "80등 영화 제목 : Terminator 2: Judgment Day (1991)\n",
-      "81등 영화 제목 : Die Hard: With a Vengeance (1995)\n",
+      "81등 영화 제목 : Die Hard: With a Vengeance (1995)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "82등 영화 제목 : Matilda (1996)\n",
       "83등 영화 제목 : Broken Arrow (1996)\n",
       "84등 영화 제목 : Fear (1996)\n",
@@ -2697,13 +2709,7 @@
       "62등 영화 제목 : Indiana Jones and the Last Crusade (1989)\n",
       "63등 영화 제목 : Game, The (1997)\n",
       "64등 영화 제목 : George of the Jungle (1997)\n",
-      "65등 영화 제목 : Aladdin (1992)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "65등 영화 제목 : Aladdin (1992)\n",
       "66등 영화 제목 : Time to Kill, A (1996)\n",
       "67등 영화 제목 : Jaws (1975)\n",
       "68등 영화 제목 : Amadeus (1984)\n",
@@ -2876,7 +2882,13 @@
       "29등 영화 제목 : Room with a View, A (1986)\n",
       "30등 영화 제목 : Indiana Jones and the Last Crusade (1989)\n",
       "31등 영화 제목 : Return of the Jedi (1983)\n",
-      "32등 영화 제목 : Patton (1970)\n",
+      "32등 영화 제목 : Patton (1970)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "33등 영화 제목 : On Golden Pond (1981)\n",
       "34등 영화 제목 : Back to the Future (1985)\n",
       "35등 영화 제목 : Mother (1996)\n",
@@ -3027,13 +3039,7 @@
       "77등 영화 제목 : Jackie Brown (1997)\n",
       "78등 영화 제목 : Mission: Impossible (1996)\n",
       "79등 영화 제목 : Wag the Dog (1997)\n",
-      "80등 영화 제목 : Blade Runner (1982)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "80등 영화 제목 : Blade Runner (1982)\n",
       "81등 영화 제목 : Twister (1996)\n",
       "82등 영화 제목 : Contact (1997)\n",
       "83등 영화 제목 : Fargo (1996)\n",
@@ -3153,7 +3159,13 @@
       "94등 영화 제목 : Swingers (1996)\n",
       "95등 영화 제목 : Starship Troopers (1997)\n",
       "96등 영화 제목 : Hunt for Red October, The (1990)\n",
-      "97등 영화 제목 : Fifth Element, The (1997)\n",
+      "97등 영화 제목 : Fifth Element, The (1997)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "98등 영화 제목 : Amistad (1997)\n",
       "99등 영화 제목 : Alien (1979)\n",
       "100등 영화 제목 : Taxi Driver (1976)\n",
@@ -3508,7 +3520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -3642,7 +3654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -3901,7 +3913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -4164,7 +4176,13 @@
       "45등 영화 제목 : Bringing Up Baby (1938)\n",
       "46등 영화 제목 : My Fellow Americans (1996)\n",
       "47등 영화 제목 : Career Girls (1997)\n",
-      "48등 영화 제목 : Romy and Michele's High School Reunion (1997)\n",
+      "48등 영화 제목 : Romy and Michele's High School Reunion (1997)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "49등 영화 제목 : Dr. Strangelove or: How I Learned to Stop Worrying and Love the Bomb (1963)\n",
       "50등 영화 제목 : Cats Don't Dance (1997)\n",
       "51등 영화 제목 : Casablanca (1942)\n",
@@ -4271,13 +4289,7 @@
       "49등 영화 제목 : Rear Window (1954)\n",
       "50등 영화 제목 : Casablanca (1942)\n",
       "51등 영화 제목 : Strictly Ballroom (1992)\n",
-      "52등 영화 제목 : Good Will Hunting (1997)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "52등 영화 제목 : Good Will Hunting (1997)\n",
       "53등 영화 제목 : Star Wars (1977)\n",
       "54등 영화 제목 : Graduate, The (1967)\n",
       "55등 영화 제목 : Usual Suspects, The (1995)\n",
@@ -4502,7 +4514,13 @@
       "68등 영화 제목 : Big Night (1996)\n",
       "69등 영화 제목 : Right Stuff, The (1983)\n",
       "70등 영화 제목 : Raging Bull (1980)\n",
-      "71등 영화 제목 : Grand Day Out, A (1992)\n",
+      "71등 영화 제목 : Grand Day Out, A (1992)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "72등 영화 제목 : Godfather: Part II, The (1974)\n",
       "73등 영화 제목 : Mighty Aphrodite (1995)\n",
       "74등 영화 제목 : Spice World (1997)\n",
@@ -4641,13 +4659,7 @@
       "1등 영화 제목 : Another Stakeout (1993)\n",
       "2등 영화 제목 : City Slickers II: The Legend of Curly's Gold (1994)\n",
       "3등 영화 제목 : Paradise Lost: The Child Murders at Robin Hood Hills (1996)\n",
-      "4등 영화 제목 : How to Make an American Quilt (1995)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "4등 영화 제목 : How to Make an American Quilt (1995)\n",
       "5등 영화 제목 : Friday (1995)\n",
       "6등 영화 제목 : Quest, The (1996)\n",
       "7등 영화 제목 : Man Without a Face, The (1993)\n",
@@ -4741,7 +4753,13 @@
       "95등 영화 제목 : 2001: A Space Odyssey (1968)\n",
       "96등 영화 제목 : African Queen, The (1951)\n",
       "97등 영화 제목 : Gandhi (1982)\n",
-      "98등 영화 제목 : Wizard of Oz, The (1939)\n",
+      "98등 영화 제목 : Wizard of Oz, The (1939)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "99등 영화 제목 : Bananas (1971)\n",
       "100등 영화 제목 : Bonnie and Clyde (1967)\n",
       "\n",
@@ -4983,13 +5001,7 @@
       "28등 영화 제목 : Lamerica (1994)\n",
       "29등 영화 제목 : World of Apu, The (Apur Sansar) (1959)\n",
       "30등 영화 제목 : Aparajito (1956)\n",
-      "31등 영화 제목 : Magic Hour, The (1998)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "31등 영화 제목 : Magic Hour, The (1998)\n",
       "32등 영화 제목 : Once Upon a Time in the West (1969)\n",
       "33등 영화 제목 : Judgment Night (1993)\n",
       "34등 영화 제목 : Assassins (1995)\n",
@@ -5001,7 +5013,13 @@
       "40등 영화 제목 : Die xue shuang xiong (Killer, The) (1989)\n",
       "41등 영화 제목 : Fearless (1993)\n",
       "42등 영화 제목 : Secrets & Lies (1996)\n",
-      "43등 영화 제목 : Shall We Dance? (1996)\n",
+      "43등 영화 제목 : Shall We Dance? (1996)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "44등 영화 제목 : 12 Angry Men (1957)\n",
       "45등 영화 제목 : Postman, The (1997)\n",
       "46등 영화 제목 : Third Man, The (1949)\n",
@@ -5321,16 +5339,16 @@
       "51등 영화 제목 : Bronx Tale, A (1993)\n",
       "52등 영화 제목 : Bride of Frankenstein (1935)\n",
       "53등 영화 제목 : Raise the Red Lantern (1991)\n",
-      "54등 영화 제목 : Three Colors: White (1994)\n"
+      "54등 영화 제목 : Three Colors: White (1994)\n",
+      "55등 영화 제목 : Englishman Who Went Up a Hill, But Came Down a Mountain, The (1995)\n",
+      "56등 영화 제목 : Half Baked (1998)\n",
+      "57등 영화 제목 : Three Colors: Red (1994)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "55등 영화 제목 : Englishman Who Went Up a Hill, But Came Down a Mountain, The (1995)\n",
-      "56등 영화 제목 : Half Baked (1998)\n",
-      "57등 영화 제목 : Three Colors: Red (1994)\n",
       "58등 영화 제목 : Notorious (1946)\n",
       "59등 영화 제목 : Some Folks Call It a Sling Blade (1993)\n",
       "60등 영화 제목 : Shanghai Triad (Yao a yao yao dao waipo qiao) (1995)\n",
@@ -5600,7 +5618,13 @@
       "15등 영화 제목 : What's Eating Gilbert Grape (1993)\n",
       "16등 영화 제목 : Dead Poets Society (1989)\n",
       "17등 영화 제목 : Bridge on the River Kwai, The (1957)\n",
-      "18등 영화 제목 : Beautiful Girls (1996)\n",
+      "18등 영화 제목 : Beautiful Girls (1996)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "19등 영화 제목 : Angels and Insects (1995)\n",
       "20등 영화 제목 : Maltese Falcon, The (1941)\n",
       "21등 영화 제목 : Deceiver (1997)\n",
@@ -5639,13 +5663,7 @@
       "54등 영화 제목 : Dances with Wolves (1990)\n",
       "55등 영화 제목 : Brothers McMullen, The (1995)\n",
       "56등 영화 제목 : In the Company of Men (1997)\n",
-      "57등 영화 제목 : Trees Lounge (1996)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "57등 영화 제목 : Trees Lounge (1996)\n",
       "58등 영화 제목 : Mimic (1997)\n",
       "59등 영화 제목 : Hunt for Red October, The (1990)\n",
       "60등 영화 제목 : Anna Karenina (1997)\n",
@@ -5889,18 +5907,18 @@
       "92등 영화 제목 : L.A. Confidential (1997)\n",
       "93등 영화 제목 : Delicatessen (1991)\n",
       "94등 영화 제목 : Chinatown (1974)\n",
-      "95등 영화 제목 : Silence of the Lambs, The (1991)\n"
+      "95등 영화 제목 : Silence of the Lambs, The (1991)\n",
+      "96등 영화 제목 : Princess Bride, The (1987)\n",
+      "97등 영화 제목 : Bridge on the River Kwai, The (1957)\n",
+      "98등 영화 제목 : Raiders of the Lost Ark (1981)\n",
+      "99등 영화 제목 : Shine (1996)\n",
+      "100등 영화 제목 : Englishman Who Went Up a Hill, But Came Down a Mountain, The (1995)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "96등 영화 제목 : Princess Bride, The (1987)\n",
-      "97등 영화 제목 : Bridge on the River Kwai, The (1957)\n",
-      "98등 영화 제목 : Raiders of the Lost Ark (1981)\n",
-      "99등 영화 제목 : Shine (1996)\n",
-      "100등 영화 제목 : Englishman Who Went Up a Hill, But Came Down a Mountain, The (1995)\n",
       "\n",
       "20. technician에게 평균 평점이 높은 영화 TOP 100\n",
       "\n",
@@ -6134,6 +6152,95 @@
     "        print(\"{0}등 영화 제목 : {1}\".format(idx+1, name))\n",
     "       \n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3-A.  Count the number of ratings by each genre for 1) all users, 2) genders, and 3) all occupations and sort them in descending order respectively"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 1) For all users"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 전체 사용자에게 시청률이 가장 높은 장르를 세고 count해서 내림차순하여라(큰거 -> 작은거)\n",
+    "\n",
+    "\n",
+    "#3. 직업별로 가장 인기있는 영화 TOP 100 출력하기\n",
+    "\n",
+    "#간소화한 user_data를 만든다. (user_id, occupation만을 포험함 데이터 셋)\n",
+    "occupation_user = u_user.loc[:,[\"user id\",\"occupation\"]]\n",
+    "#u_data와 column명을 맞추기 위해 바꿔준다.\n",
+    "occupation_user.columns = [\"userID\" , \"occupation\"]\n",
+    "\n",
+    "#gender_user와 u_data를 inner joing한다.\n",
+    "join_data = pd.merge(u_data, occupation_user)\n",
+    "\n",
+    "for i in range(len(occupation)):\n",
+    "    specific_join = join_data.loc[join_data['occupation']==occupation['job'][i]] #occupation별로 데이터 뽑기\n",
+    "    occupation_result = specific_join.value_counts(subset='itemID', ascending=False).index[:100] #시청률 상위 100개 뽑기\n",
+    "    \n",
+    "    print(\"\\n{0}. {1}에게 가장 시청률이 높은 영화 TOP 100\\n\".format(i+1,occupation['job'][i]))\n",
+    "    \n",
+    "    for idx in range(100):\n",
+    "        name = u_item.loc[u_item['movie id']==occupation_result[idx], \"movie title\"].values[0] #movie_id를 통해  movie title 추출하기\n",
+    "        print(\"{0}등 영화 제목 : {1}\".format(idx+1, name))\n",
+    "       \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2) By gender , 각 성별로 가장 많이 본 장르를 내림차순으로 정렬"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 3) By all occupation, 각 직업별로 많이 본 장를 내림차순으로 정렬"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3-B. Measure the average ratings by genre for 1) all users, 2) genders, and 3) all occupations and sort them in descending order respectively"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 1) For all users, 전체 사용자가 평가한 각 장르의 평점의 평균"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2) By gender, 각 성별이 평가한 장르의 평균 평점"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 3) By all occupation, 각 직업별로 평가한 각 장르의 평균 평점"
    ]
   },
   {
