3-A(3. 직업별로 가장 많이 본 장르데이터 내림차순 나열) 완료

--- a/assignment2/assignment.ipynb
+++ b/assignment2/assignment.ipynb
@@ -6325,6 +6325,520 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "1. student이 가장 많이 본 장르\n",
+      "\n",
+      "1등 영화 장르 : Drama, 3099\n",
+      "2등 영화 장르 : Comedy, 2203\n",
+      "3등 영화 장르 : Action, 1858\n",
+      "4등 영화 장르 : Thriller, 1570\n",
+      "5등 영화 장르 : Romance, 1539\n",
+      "6등 영화 장르 : Adventure, 1020\n",
+      "7등 영화 장르 : Sci-Fi, 942\n",
+      "8등 영화 장르 : War, 786\n",
+      "9등 영화 장르 : Crime, 565\n",
+      "10등 영화 장르 : Children's, 462\n",
+      "11등 영화 장르 : Horror, 391\n",
+      "12등 영화 장르 : Mystery, 385\n",
+      "13등 영화 장르 : Musical, 354\n",
+      "14등 영화 장르 : Animation, 203\n",
+      "15등 영화 장르 : Western, 168\n",
+      "16등 영화 장르 : Film-Noir, 147\n",
+      "17등 영화 장르 : Fantasy, 94\n",
+      "18등 영화 장르 : Documentary, 48\n",
+      "19등 영화 장르 : unknown, 0\n",
+      "\n",
+      "2. student이 가장 많이 본 장르\n",
+      "\n",
+      "1등 영화 장르 : Drama, 957\n",
+      "2등 영화 장르 : Comedy, 617\n",
+      "3등 영화 장르 : Action, 528\n",
+      "4등 영화 장르 : Thriller, 476\n",
+      "5등 영화 장르 : Romance, 462\n",
+      "6등 영화 장르 : Adventure, 311\n",
+      "7등 영화 장르 : Sci-Fi, 308\n",
+      "8등 영화 장르 : War, 225\n",
+      "9등 영화 장르 : Children's, 202\n",
+      "10등 영화 장르 : Crime, 201\n",
+      "11등 영화 장르 : Mystery, 164\n",
+      "12등 영화 장르 : Musical, 157\n",
+      "13등 영화 장르 : Animation, 121\n",
+      "14등 영화 장르 : Horror, 102\n",
+      "15등 영화 장르 : Film-Noir, 64\n",
+      "16등 영화 장르 : Documentary, 34\n",
+      "17등 영화 장르 : Western, 29\n",
+      "18등 영화 장르 : Fantasy, 24\n",
+      "19등 영화 장르 : unknown, 0\n",
+      "\n",
+      "3. student이 가장 많이 본 장르\n",
+      "\n",
+      "1등 영화 장르 : Drama, 238\n",
+      "2등 영화 장르 : Comedy, 168\n",
+      "3등 영화 장르 : Romance, 133\n",
+      "4등 영화 장르 : Thriller, 117\n",
+      "5등 영화 장르 : Action, 110\n",
+      "6등 영화 장르 : Adventure, 57\n",
+      "7등 영화 장르 : Sci-Fi, 56\n",
+      "8등 영화 장르 : War, 44\n",
+      "9등 영화 장르 : Crime, 41\n",
+      "10등 영화 장르 : Children's, 28\n",
+      "11등 영화 장르 : Musical, 27\n",
+      "12등 영화 장르 : Mystery, 27\n",
+      "13등 영화 장르 : Animation, 22\n",
+      "14등 영화 장르 : Horror, 18\n",
+      "15등 영화 장르 : Documentary, 13\n",
+      "16등 영화 장르 : Film-Noir, 9\n",
+      "17등 영화 장르 : Fantasy, 7\n",
+      "18등 영화 장르 : Western, 5\n",
+      "19등 영화 장르 : unknown, 0\n",
+      "\n",
+      "4. student이 가장 많이 본 장르\n",
+      "\n",
+      "1등 영화 장르 : Drama, 4281\n",
+      "2등 영화 장르 : Comedy, 2708\n",
+      "3등 영화 장르 : Romance, 2006\n",
+      "4등 영화 장르 : Action, 1962\n",
+      "5등 영화 장르 : Thriller, 1767\n",
+      "6등 영화 장르 : Adventure, 1128\n",
+      "7등 영화 장르 : War, 1005\n",
+      "8등 영화 장르 : Sci-Fi, 986\n",
+      "9등 영화 장르 : Crime, 710\n",
+      "10등 영화 장르 : Children's, 593\n",
+      "11등 영화 장르 : Mystery, 532\n",
+      "12등 영화 장르 : Musical, 481\n",
+      "13등 영화 장르 : Horror, 421\n",
+      "14등 영화 장르 : Animation, 263\n",
+      "15등 영화 장르 : Film-Noir, 202\n",
+      "16등 영화 장르 : Western, 189\n",
+      "17등 영화 장르 : Fantasy, 112\n",
+      "18등 영화 장르 : Documentary, 107\n",
+      "19등 영화 장르 : unknown, 1\n",
+      "\n",
+      "5. student이 가장 많이 본 장르\n",
+      "\n",
+      "1등 영화 장르 : Drama, 3153\n",
+      "2등 영화 장르 : Comedy, 2438\n",
+      "3등 영화 장르 : Action, 2277\n",
+      "4등 영화 장르 : Thriller, 1712\n",
+      "5등 영화 장르 : Romance, 1467\n",
+      "6등 영화 장르 : Adventure, 1299\n",
+      "7등 영화 장르 : Sci-Fi, 1221\n",
+      "8등 영화 장르 : War, 858\n",
+      "9등 영화 장르 : Children's, 629\n",
+      "10등 영화 장르 : Crime, 611\n",
+      "11등 영화 장르 : Musical, 441\n",
+      "12등 영화 장르 : Horror, 414\n",
+      "13등 영화 장르 : Animation, 363\n",
+      "14등 영화 장르 : Mystery, 363\n",
+      "15등 영화 장르 : Western, 180\n",
+      "16등 영화 장르 : Film-Noir, 145\n",
+      "17등 영화 장르 : Fantasy, 125\n",
+      "18등 영화 장르 : Documentary, 51\n",
+      "19등 영화 장르 : unknown, 1\n",
+      "\n",
+      "6. student이 가장 많이 본 장르\n",
+      "\n",
+      "1등 영화 장르 : Drama, 804\n",
+      "2등 영화 장르 : Comedy, 574\n",
+      "3등 영화 장르 : Thriller, 554\n",
+      "4등 영화 장르 : Action, 499\n",
+      "5등 영화 장르 : Romance, 342\n",
+      "6등 영화 장르 : Sci-Fi, 289\n",
+      "7등 영화 장르 : Adventure, 249\n",
+      "8등 영화 장르 : Crime, 207\n",
+      "9등 영화 장르 : Horror, 192\n",
+      "10등 영화 장르 : War, 174\n",
+      "11등 영화 장르 : Mystery, 132\n",
+      "12등 영화 장르 : Children's, 104\n",
+      "13등 영화 장르 : Musical, 68\n",
+      "14등 영화 장르 : Animation, 62\n",
+      "15등 영화 장르 : Film-Noir, 47\n",
+      "16등 영화 장르 : Western, 27\n",
+      "17등 영화 장르 : Fantasy, 25\n",
+      "18등 영화 장르 : Documentary, 23\n",
+      "19등 영화 장르 : unknown, 1\n",
+      "\n",
+      "7. student이 가장 많이 본 장르\n",
+      "\n",
+      "1등 영화 장르 : Drama, 1407\n",
+      "2등 영화 장르 : Comedy, 951\n",
+      "3등 영화 장르 : Thriller, 811\n",
+      "4등 영화 장르 : Action, 808\n",
+      "5등 영화 장르 : Romance, 592\n",
+      "6등 영화 장르 : Adventure, 436\n",
+      "7등 영화 장르 : Sci-Fi, 391\n",
+      "8등 영화 장르 : War, 312\n",
+      "9등 영화 장르 : Crime, 287\n",
+      "10등 영화 장르 : Children's, 232\n",
+      "11등 영화 장르 : Mystery, 203\n",
+      "12등 영화 장르 : Horror, 155\n",
+      "13등 영화 장르 : Musical, 131\n",
+      "14등 영화 장르 : Animation, 91\n",
+      "15등 영화 장르 : Film-Noir, 58\n",
+      "16등 영화 장르 : Fantasy, 50\n",
+      "17등 영화 장르 : Western, 49\n",
+      "18등 영화 장르 : Documentary, 26\n",
+      "19등 영화 장르 : unknown, 1\n",
+      "\n",
+      "8. student이 가장 많이 본 장르\n",
+      "\n",
+      "1등 영화 장르 : Drama, 1297\n",
+      "2등 영화 장르 : Comedy, 722\n",
+      "3등 영화 장르 : Action, 577\n",
+      "4등 영화 장르 : Thriller, 563\n",
+      "5등 영화 장르 : Romance, 499\n",
+      "6등 영화 장르 : Adventure, 323\n",
+      "7등 영화 장르 : Sci-Fi, 266\n",
+      "8등 영화 장르 : War, 230\n",
+      "9등 영화 장르 : Children's, 213\n",
+      "10등 영화 장르 : Crime, 200\n",
+      "11등 영화 장르 : Mystery, 140\n",
+      "12등 영화 장르 : Musical, 126\n",
+      "13등 영화 장르 : Horror, 120\n",
+      "14등 영화 장르 : Animation, 89\n",
+      "15등 영화 장르 : Film-Noir, 50\n",
+      "16등 영화 장르 : Western, 47\n",
+      "17등 영화 장르 : Documentary, 45\n",
+      "18등 영화 장르 : Fantasy, 38\n",
+      "19등 영화 장르 : unknown, 0\n",
+      "\n",
+      "9. student이 가장 많이 본 장르\n",
+      "\n",
+      "1등 영화 장르 : Drama, 104\n",
+      "2등 영화 장르 : Thriller, 95\n",
+      "3등 영화 장르 : Comedy, 93\n",
+      "4등 영화 장르 : Action, 92\n",
+      "5등 영화 장르 : Romance, 59\n",
+      "6등 영화 장르 : Adventure, 41\n",
+      "7등 영화 장르 : Mystery, 32\n",
+      "8등 영화 장르 : Sci-Fi, 30\n",
+      "9등 영화 장르 : War, 28\n",
+      "10등 영화 장르 : Children's, 25\n",
+      "11등 영화 장르 : Crime, 25\n",
+      "12등 영화 장르 : Musical, 15\n",
+      "13등 영화 장르 : Animation, 9\n",
+      "14등 영화 장르 : Horror, 9\n",
+      "15등 영화 장르 : Film-Noir, 4\n",
+      "16등 영화 장르 : Fantasy, 3\n",
+      "17등 영화 장르 : Documentary, 2\n",
+      "18등 영화 장르 : unknown, 0\n",
+      "19등 영화 장르 : Western, 0\n",
+      "\n",
+      "10. student이 가장 많이 본 장르\n",
+      "\n",
+      "1등 영화 장르 : Drama, 543\n",
+      "2등 영화 장르 : Comedy, 460\n",
+      "3등 영화 장르 : Action, 283\n",
+      "4등 영화 장르 : Romance, 272\n",
+      "5등 영화 장르 : Thriller, 247\n",
+      "6등 영화 장르 : Adventure, 142\n",
+      "7등 영화 장르 : War, 142\n",
+      "8등 영화 장르 : Sci-Fi, 141\n",
+      "9등 영화 장르 : Crime, 107\n",
+      "10등 영화 장르 : Children's, 83\n",
+      "11등 영화 장르 : Mystery, 78\n",
+      "12등 영화 장르 : Musical, 72\n",
+      "13등 영화 장르 : Horror, 60\n",
+      "14등 영화 장르 : Film-Noir, 36\n",
+      "15등 영화 장르 : Western, 35\n",
+      "16등 영화 장르 : Animation, 35\n",
+      "17등 영화 장르 : Fantasy, 14\n",
+      "18등 영화 장르 : Documentary, 10\n",
+      "19등 영화 장르 : unknown, 0\n",
+      "\n",
+      "11. student이 가장 많이 본 장르\n",
+      "\n",
+      "1등 영화 장르 : Drama, 2557\n",
+      "2등 영화 장르 : Comedy, 1576\n",
+      "3등 영화 장르 : Romance, 1245\n",
+      "4등 영화 장르 : Action, 988\n",
+      "5등 영화 장르 : Thriller, 977\n",
+      "6등 영화 장르 : Adventure, 536\n",
+      "7등 영화 장르 : Sci-Fi, 508\n",
+      "8등 영화 장르 : War, 481\n",
+      "9등 영화 장르 : Crime, 370\n",
+      "10등 영화 장르 : Mystery, 293\n",
+      "11등 영화 장르 : Children's, 290\n",
+      "12등 영화 장르 : Musical, 238\n",
+      "13등 영화 장르 : Horror, 226\n",
+      "14등 영화 장르 : Animation, 159\n",
+      "15등 영화 장르 : Film-Noir, 96\n",
+      "16등 영화 장르 : Western, 82\n",
+      "17등 영화 장르 : Fantasy, 55\n",
+      "18등 영화 장르 : Documentary, 48\n",
+      "19등 영화 장르 : unknown, 0\n",
+      "\n",
+      "12. student이 가장 많이 본 장르\n",
+      "\n",
+      "1등 영화 장르 : Drama, 824\n",
+      "2등 영화 장르 : Comedy, 535\n",
+      "3등 영화 장르 : Action, 477\n",
+      "4등 영화 장르 : Thriller, 442\n",
+      "5등 영화 장르 : Romance, 383\n",
+      "6등 영화 장르 : Adventure, 246\n",
+      "7등 영화 장르 : War, 228\n",
+      "8등 영화 장르 : Sci-Fi, 221\n",
+      "9등 영화 장르 : Children's, 163\n",
+      "10등 영화 장르 : Crime, 161\n",
+      "11등 영화 장르 : Mystery, 128\n",
+      "12등 영화 장르 : Musical, 114\n",
+      "13등 영화 장르 : Horror, 86\n",
+      "14등 영화 장르 : Animation, 79\n",
+      "15등 영화 장르 : Film-Noir, 40\n",
+      "16등 영화 장르 : Western, 35\n",
+      "17등 영화 장르 : Fantasy, 20\n",
+      "18등 영화 장르 : Documentary, 12\n",
+      "19등 영화 장르 : unknown, 0\n",
+      "\n",
+      "13. student이 가장 많이 본 장르\n",
+      "\n",
+      "1등 영화 장르 : Action, 301\n",
+      "2등 영화 장르 : Drama, 268\n",
+      "3등 영화 장르 : Thriller, 262\n",
+      "4등 영화 장르 : Comedy, 255\n",
+      "5등 영화 장르 : Adventure, 160\n",
+      "6등 영화 장르 : Romance, 150\n",
+      "7등 영화 장르 : Sci-Fi, 145\n",
+      "8등 영화 장르 : Children's, 91\n",
+      "9등 영화 장르 : Crime, 74\n",
+      "10등 영화 장르 : Horror, 56\n",
+      "11등 영화 장르 : War, 55\n",
+      "12등 영화 장르 : Animation, 43\n",
+      "13등 영화 장르 : Musical, 43\n",
+      "14등 영화 장르 : Mystery, 33\n",
+      "15등 영화 장르 : Fantasy, 12\n",
+      "16등 영화 장르 : Film-Noir, 12\n",
+      "17등 영화 장르 : Western, 10\n",
+      "18등 영화 장르 : Documentary, 1\n",
+      "19등 영화 장르 : unknown, 1\n",
+      "\n",
+      "14. student이 가장 많이 본 장르\n",
+      "\n",
+      "1등 영화 장르 : Drama, 4307\n",
+      "2등 영화 장르 : Comedy, 3165\n",
+      "3등 영화 장르 : Action, 2672\n",
+      "4등 영화 장르 : Thriller, 2321\n",
+      "5등 영화 장르 : Romance, 2177\n",
+      "6등 영화 장르 : Adventure, 1431\n",
+      "7등 영화 장르 : Sci-Fi, 1242\n",
+      "8등 영화 장르 : War, 1000\n",
+      "9등 영화 장르 : Children's, 881\n",
+      "10등 영화 장르 : Crime, 828\n",
+      "11등 영화 장르 : Mystery, 579\n",
+      "12등 영화 장르 : Musical, 566\n",
+      "13등 영화 장르 : Horror, 535\n",
+      "14등 영화 장르 : Animation, 421\n",
+      "15등 영화 장르 : Western, 172\n",
+      "16등 영화 장르 : Film-Noir, 146\n",
+      "17등 영화 장르 : Fantasy, 144\n",
+      "18등 영화 장르 : Documentary, 65\n",
+      "19등 영화 장르 : unknown, 1\n",
+      "\n",
+      "15. student이 가장 많이 본 장르\n",
+      "\n",
+      "1등 영화 장르 : Drama, 2800\n",
+      "2등 영화 장르 : Comedy, 2418\n",
+      "3등 영화 장르 : Action, 2322\n",
+      "4등 영화 장르 : Thriller, 1750\n",
+      "5등 영화 장르 : Romance, 1400\n",
+      "6등 영화 장르 : Adventure, 1240\n",
+      "7등 영화 장르 : Sci-Fi, 1167\n",
+      "8등 영화 장르 : War, 755\n",
+      "9등 영화 장르 : Crime, 666\n",
+      "10등 영화 장르 : Children's, 583\n",
+      "11등 영화 장르 : Horror, 389\n",
+      "12등 영화 장르 : Musical, 385\n",
+      "13등 영화 장르 : Mystery, 375\n",
+      "14등 영화 장르 : Animation, 312\n",
+      "15등 영화 장르 : Western, 162\n",
+      "16등 영화 장르 : Film-Noir, 141\n",
+      "17등 영화 장르 : Fantasy, 117\n",
+      "18등 영화 장르 : Documentary, 51\n",
+      "19등 영화 장르 : unknown, 1\n",
+      "\n",
+      "16. student이 가장 많이 본 장르\n",
+      "\n",
+      "1등 영화 장르 : Drama, 727\n",
+      "2등 영화 장르 : Comedy, 512\n",
+      "3등 영화 장르 : Romance, 321\n",
+      "4등 영화 장르 : Thriller, 309\n",
+      "5등 영화 장르 : Action, 278\n",
+      "6등 영화 장르 : Adventure, 160\n",
+      "7등 영화 장르 : War, 145\n",
+      "8등 영화 장르 : Crime, 137\n",
+      "9등 영화 장르 : Sci-Fi, 130\n",
+      "10등 영화 장르 : Children's, 110\n",
+      "11등 영화 장르 : Mystery, 98\n",
+      "12등 영화 장르 : Musical, 93\n",
+      "13등 영화 장르 : Horror, 66\n",
+      "14등 영화 장르 : Film-Noir, 43\n",
+      "15등 영화 장르 : Animation, 35\n",
+      "16등 영화 장르 : Western, 33\n",
+      "17등 영화 장르 : Fantasy, 22\n",
+      "18등 영화 장르 : Documentary, 16\n",
+      "19등 영화 장르 : unknown, 0\n",
+      "\n",
+      "17. student이 가장 많이 본 장르\n",
+      "\n",
+      "1등 영화 장르 : Drama, 317\n",
+      "2등 영화 장르 : Comedy, 314\n",
+      "3등 영화 장르 : Action, 222\n",
+      "4등 영화 장르 : Thriller, 200\n",
+      "5등 영화 장르 : Romance, 166\n",
+      "6등 영화 장르 : Adventure, 99\n",
+      "7등 영화 장르 : Sci-Fi, 98\n",
+      "8등 영화 장르 : Crime, 79\n",
+      "9등 영화 장르 : War, 77\n",
+      "10등 영화 장르 : Horror, 49\n",
+      "11등 영화 장르 : Mystery, 40\n",
+      "12등 영화 장르 : Children's, 38\n",
+      "13등 영화 장르 : Musical, 27\n",
+      "14등 영화 장르 : Western, 16\n",
+      "15등 영화 장르 : Animation, 15\n",
+      "16등 영화 장르 : Film-Noir, 14\n",
+      "17등 영화 장르 : Fantasy, 9\n",
+      "18등 영화 장르 : Documentary, 2\n",
+      "19등 영화 장르 : unknown, 0\n",
+      "\n",
+      "18. student이 가장 많이 본 장르\n",
+      "\n",
+      "1등 영화 장르 : Drama, 932\n",
+      "2등 영화 장르 : Action, 566\n",
+      "3등 영화 장르 : Comedy, 535\n",
+      "4등 영화 장르 : Thriller, 469\n",
+      "5등 영화 장르 : Romance, 440\n",
+      "6등 영화 장르 : Sci-Fi, 318\n",
+      "7등 영화 장르 : Adventure, 285\n",
+      "8등 영화 장르 : War, 255\n",
+      "9등 영화 장르 : Crime, 177\n",
+      "10등 영화 장르 : Mystery, 122\n",
+      "11등 영화 장르 : Children's, 108\n",
+      "12등 영화 장르 : Musical, 91\n",
+      "13등 영화 장르 : Horror, 70\n",
+      "14등 영화 장르 : Animation, 61\n",
+      "15등 영화 장르 : Film-Noir, 39\n",
+      "16등 영화 장르 : Western, 24\n",
+      "17등 영화 장르 : Fantasy, 20\n",
+      "18등 영화 장르 : Documentary, 17\n",
+      "19등 영화 장르 : unknown, 0\n",
+      "\n",
+      "19. student이 가장 많이 본 장르\n",
+      "\n",
+      "1등 영화 장르 : Drama, 7777\n",
+      "2등 영화 장르 : Comedy, 6958\n",
+      "3등 영화 장르 : Action, 6398\n",
+      "4등 영화 장르 : Thriller, 5130\n",
+      "5등 영화 장르 : Romance, 4156\n",
+      "6등 영화 장르 : Adventure, 3358\n",
+      "7등 영화 장르 : Sci-Fi, 3069\n",
+      "8등 영화 장르 : Crime, 1836\n",
+      "9등 영화 장르 : War, 1770\n",
+      "10등 영화 장르 : Children's, 1759\n",
+      "11등 영화 장르 : Horror, 1340\n",
+      "12등 영화 장르 : Musical, 1078\n",
+      "13등 영화 장르 : Mystery, 1009\n",
+      "14등 영화 장르 : Animation, 914\n",
+      "15등 영화 장르 : Western, 408\n",
+      "16등 영화 장르 : Fantasy, 352\n",
+      "17등 영화 장르 : Film-Noir, 269\n",
+      "18등 영화 장르 : Documentary, 117\n",
+      "19등 영화 장르 : unknown, 1\n",
+      "\n",
+      "20. student이 가장 많이 본 장르\n",
+      "\n",
+      "1등 영화 장르 : Drama, 1295\n",
+      "2등 영화 장르 : Action, 1079\n",
+      "3등 영화 장르 : Comedy, 1056\n",
+      "4등 영화 장르 : Thriller, 796\n",
+      "5등 영화 장르 : Romance, 645\n",
+      "6등 영화 장르 : Adventure, 558\n",
+      "7등 영화 장르 : Sci-Fi, 531\n",
+      "8등 영화 장르 : War, 383\n",
+      "9등 영화 장르 : Crime, 275\n",
+      "10등 영화 장르 : Children's, 221\n",
+      "11등 영화 장르 : Mystery, 177\n",
+      "12등 영화 장르 : Musical, 175\n",
+      "13등 영화 장르 : Horror, 164\n",
+      "14등 영화 장르 : Animation, 132\n",
+      "15등 영화 장르 : Western, 89\n",
+      "16등 영화 장르 : Film-Noir, 46\n",
+      "17등 영화 장르 : Fantasy, 38\n",
+      "18등 영화 장르 : Documentary, 24\n",
+      "19등 영화 장르 : unknown, 1\n",
+      "\n",
+      "21. student이 가장 많이 본 장르\n",
+      "\n",
+      "1등 영화 장르 : Drama, 2208\n",
+      "2등 영화 장르 : Comedy, 1574\n",
+      "3등 영화 장르 : Thriller, 1304\n",
+      "4등 영화 장르 : Action, 1292\n",
+      "5등 영화 장르 : Romance, 1007\n",
+      "6등 영화 장르 : Adventure, 674\n",
+      "7등 영화 장르 : Sci-Fi, 671\n",
+      "8등 영화 장르 : Crime, 498\n",
+      "9등 영화 장르 : Horror, 454\n",
+      "10등 영화 장르 : War, 445\n",
+      "11등 영화 장르 : Children's, 367\n",
+      "12등 영화 장르 : Mystery, 335\n",
+      "13등 영화 장르 : Musical, 272\n",
+      "14등 영화 장르 : Animation, 176\n",
+      "15등 영화 장르 : Film-Noir, 125\n",
+      "16등 영화 장르 : Western, 94\n",
+      "17등 영화 장르 : Fantasy, 71\n",
+      "18등 영화 장르 : Documentary, 46\n",
+      "19등 영화 장르 : unknown, 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 직업별로 장르를 본 회수를 count해서 내림차순하여라(큰거 -> 작은거)\n",
+    "\n",
+    "#u_item과 u_data를 inner joing (on movie id)한다.\n",
+    "join_data = pd.merge(u_data, u_item)\n",
+    "\n",
+    "#간소화한 user_data를 만든다. (user_id, occupation만을 포험함 데이터 셋)\n",
+    "occupation_user = u_user.loc[:,[\"user id\",\"occupation\"]]\n",
+    "\n",
+    "#gender_user와 join_data inner joing한다.\n",
+    "join_data = pd.merge(join_data, occupation_user)\n",
+    "\n",
+    "for idx in range(len(occupation)):\n",
+    "    occupation_data = join_data.loc[join_data['occupation']==occupation['job'][idx]] #occupation별로 데이터 뽑기\n",
+    "    \n",
+    "    genre_data = []\n",
+    "    for i in range(len(genre)-1):\n",
+    "        temp = []\n",
+    "        total = occupation_data[genre['genre_name'][i]].sum()\n",
+    "        temp.append(genre['genre_name'][i])\n",
+    "        temp.append(total)\n",
+    "        genre_data.append(temp)    \n",
+    "\n",
+    "    genre_data = pd.DataFrame(genre_data,columns=['genre_name','count'])\n",
+    "    genre_data = genre_data.sort_values(by='count', ascending=False).reset_index(drop=True)\n",
+    "    \n",
+    "    print(\"\\n{0}. {1}이 가장 많이 본 장르\\n\".format(idx+1,occupation['job'][i]))\n",
+    "    \n",
+    "    for i in range(len(result)):\n",
+    "        print(\"{0}등 영화 장르 : {1}, {2}\".format(i+1, genre_data['genre_name'][i],genre_data['count'][i]))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
