부제목 수정, 평점 평균 -> 평균 평점으로 변경

--- a/assignment2/assignment.ipynb
+++ b/assignment2/assignment.ipynb
@@ -5384,7 +5384,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### A-1. ### B-2. Count the number of ratings by each genre for all users and sort them in descending order respectively"
+    "### A-1. Count the number of ratings by each genre for all users and sort them in descending order respectively"
    ]
   },
   {
@@ -6792,7 +6792,7 @@
     "    #평균의 평점을 내림차순 정렬한다.\n",
     "    genre_data = genre_data.sort_values(by='mean', ascending=False).reset_index(drop=True)\n",
     "    \n",
-    "    print(\"\\n{0}. {1}이 평가한 영화 장르의 평점 평균을 내림차순으로 정렬\\n\".format(idx+1,occupation['job'][idx]))\n",
+    "    print(\"\\n{0}. {1}이 평가한 영화 장르의 평균 평점을 내림차순으로 정렬\\n\".format(idx+1,occupation['job'][idx]))\n",
     "    \n",
     "    for i in range(len(genre_data)):\n",
     "        print(\"{0}등 영화 장르 : {1}, {2}\".format(i+1, genre_data['genre_name'][i],genre_data['mean'][i]))\n",
