소제목 B -> A로 바꿔줌.

--- a/assignment2/assignment.ipynb
+++ b/assignment2/assignment.ipynb
@@ -5450,7 +5450,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### B-2. Count the number of ratings by each genre for genders and sort them in descending order respectively"
+    "### A-2. Count the number of ratings by each genre for genders and sort them in descending order respectively"
    ]
   },
   {
